--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,9 @@
         "optimize-autoloader": true,
         "sort-packages": true
     },
-    "require": {
-        "consolidation/robo": "^1.3"
-    },
     "require-dev": {
         "codeception/codeception": "^2.4",
+        "consolidation/robo": "^1.3",
         "squizlabs/php_codesniffer": "^3.3",
         "sweetchuck/git-hooks": "^0.0.10",
         "webmozart/path-util": "^2.3"
