--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,20 @@
 {
+    "type": "library",
     "name": "sweetchuck/cli-cmd-builder",
     "description": "Build a CLI commands. Basically string concatenating.",
-    "license": "proprietary",
+    "homepage": "https://github.com/Sweetchuck/cli-cmd-builder",
+    "authors": [
+        {
+            "name": "Dávid Andor",
+            "role": "Maintainer",
+            "homepage": "https://github.com/Sweetchuck"
+        }
+    ],
+    "support": {
+        "source": "https://github.com/Sweetchuck/cli-cmd-builder.git",
+        "issues": "https://github.com/Sweetchuck/cli-cmd-builder/issues"
+    },
+    "license": "GPL-3.0-or-later",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
@@ -10,14 +23,16 @@
         "sort-packages": true
     },
     "require": {
+        "php": ">=7.2",
         "ext-mbstring": "*",
         "ext-pcre": "*"
     },
     "require-dev": {
-        "codeception/codeception": "^2.4",
-        "consolidation/robo": "^1.3",
-        "squizlabs/php_codesniffer": "^3.3",
-        "sweetchuck/git-hooks": "^0.0.10",
+        "codeception/codeception": "^4.0",
+        "codeception/module-asserts": "^1.1",
+        "consolidation/robo": "^2.0",
+        "squizlabs/php_codesniffer": "^3.5",
+        "sweetchuck/git-hooks": "^0.0",
         "webmozart/path-util": "^2.3"
     },
     "autoload": {
@@ -27,7 +42,6 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Sweetchuck\\CliCmdBuilder\\Test\\Helper\\": "tests/_support/Helper/",
             "Sweetchuck\\CliCmdBuilder\\Tests\\Unit\\": "tests/unit/"
         }
     },
